Badminton.FE/src/app/shared.scss
.flex-row-8 {
  display: flex;
  flex-direction: row;
  gap: 8px;
}

.height-100 {
  height: 100%;
}

//.padding-bottom-8 {
//  padding-bottom: 8px;
//}

.mat-mdc-table {
  overflow: auto;

  &.is-loading {
    opacity: 0.5;
    pointer-events: none;
  }
}

.cdk-drag-preview {
  border: none;
  box-sizing: border-box;
  border-radius: 4px;
  box-shadow: 0 5px 5px -3px rgba(0, 0, 0, 0.2),
  0 8px 10px 1px rgba(0, 0, 0, 0.14),
  0 3px 14px 2px rgba(0, 0, 0, 0.12);
}

.cdk-drag-placeholder {
  opacity: 0;
}

.cdk-drag-animating {
  transition: transform 100ms cubic-bezier(0, 0, 0.2, 1);
}

.mat-mdc-table.cdk-drop-list-dragging .mat-mdc-row:not(.cdk-drag-placeholder) {
  transition: transform 100ms cubic-bezier(0, 0, 0.2, 1);
}

.handle {
  cursor: move;
}

.even-court {
  background-color: rgb(211, 211, 211, 0.3);
}

.selected-row {
  background-color: lightblue;
}

